# react-native-keys

./: .gitignore  OAT.xml  README.OpenSource  README.md  keysHarmony.js  package.json  tsconfig.json
harmony/: rnoh_keys.har
harmony/rnoh_keys/: .ohpmignore  BuildProfile.ets  Index.ets  oh-package.json5
harmony/rnoh_keys/src/main/: module.json5
harmony/rnoh_keys/src/main/cpp/: CMakeLists.txt  PrivateKey.h  RNKeysPackage.h  RNKeysTurboModule.cpp  RNKeysTurboModule.h  napi_init.cpp
harmony/rnoh_keys/src/main/cpp/types/librnoh_keys/: Index.d.ts  oh-package.json5
harmony/rnoh_keys/src/main/ets/: RnkeysPackage.ets  RnkeysTurboModule.ets
harmony/rnoh_keys/src/ohosTest/: module.json5
harmony/rnoh_keys/src/ohosTest/ets/test/: Ability.test.ets
harmony/rnoh_keys/src/test/: LocalUnit.test.ets
src/: index.ts
src/util/: cmakeListsTempleteHarmony.js  common.js  generatePublicKeysToBuildProfile.js  keysFilesTemplateHarmony.js
